# CJ-Data-Quality-Toolkit

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml
cj_data_quality/: __init__.py  constants.py  notebook_utils.py  sample_data.py  types.py
cj_data_quality/anomaly/: __init__.py  _utils.py  spike_detector.py  sql_generators.py  time_series_detector.py
cj_data_quality/coverage/: __init__.py  coverage_matrix.py  equity_coverage.py  sql_generators.py
cj_data_quality/drift/: __init__.py  distribution_drift.py  sql_generators.py  temporal_drift.py
cj_data_quality/profiling/: __init__.py  column_profiler.py  sql_generators.py  table_profiler.py  type_inference.py
cj_data_quality/validation/: __init__.py  completeness_scorer.py  referential_integrity.py  sql_generators.py  temporal_consistency.py
cj_data_quality/visualization/: __init__.py  _style.py  cj_data_quality.mplstyle  heatmaps.py  plots.py
data/: README.md  __init__.py  download_bjs_data.py
notebooks/: 01_data_profiling.ipynb  02_cross_state_coverage.ipynb  03_temporal_drift_analysis.ipynb  04_anomaly_detection.ipynb  05_equity_data_quality.ipynb
sql/anomaly/: rolling_stats.sql  zscore_detection.sql
sql/coverage/: cross_state_matrix.sql  demographic_completeness.sql
sql/drift/: distribution_shift.sql  period_comparison.sql
sql/profiling/: cardinality_analysis.sql  column_stats.sql  distribution_stats.sql  null_rate_analysis.sql
sql/validation/: completeness_check.sql  date_ordering_check.sql  duplicate_detection.sql
tests/: conftest.py  edge_cases_test.py  notebook_utils_test.py  sample_data_test.py
tests/anomaly/: spike_detector_test.py  sql_generators_test.py  time_series_detector_test.py
tests/coverage/: coverage_matrix_test.py  equity_coverage_test.py  sql_generators_test.py
tests/drift/: distribution_drift_test.py  (+2 more)
(+9 files in other folders)
