[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cj-data-quality"
version = "0.1.0"
description = "Criminal Justice Data Quality Profiling & Validation Toolkit"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Recidiviz Contributors"}]
keywords = ["criminal-justice", "data-quality", "profiling", "validation", "recidiviz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.24",
    "attrs>=23.1",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "streamlit>=1.28",
]

[project.urls]
Repository = "https://github.com/Recidiviz/cj-data-quality"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "pandas-stubs>=2.0",
]
notebooks = [
    "jupyter>=1.0",
    "nbconvert>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "data.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["seaborn", "seaborn.*"]
ignore_missing_imports = true

[tool.setuptools.package-data]
cj_data_quality = ["py.typed", "visualization/*.mplstyle"]

[tool.setuptools.packages.find]
include = ["cj_data_quality*"]
